# rust_on_ios

./: LICENSE  README.md  notes.md
rust_on_ios/: ContentView.swift  rust_on_ios-Bridging-Header.h  rust_on_iosApp.swift  rust_on_iosDocument.swift
rust_on_ios.xcodeproj/: project.pbxproj
rust_on_ios.xcodeproj/xcuserdata/n8henrie.xcuserdatad/xcschemes/: xcschememanagement.plist
rust_on_iosTests/: rust_on_iosTests.swift
rust_on_iosUITests/: rust_on_iosUITests.swift  rust_on_iosUITestsLaunchTests.swift
rustyios/: Cargo.toml  Makefile
rustyios/src/: lib.rs
